plugins {
    id 'application'
    id 'distribution'
    id 'org.springframework.boot' version '2.3.0.RELEASE'
    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
    id "io.freefair.lombok" version "5.3.0"
}

group 'com.mercadolibre'
version '1.0-SNAPSHOT'

sourceCompatibility = 11
targetCompatibility = 11

bootJar {
    destinationDirectory = file("../build/libs/")
    archiveFileName = 'application.jar'
}

mainClassName = 'com.mercadolibre.planning.model.me.PlanningModelMiddleendApplication'

dependencies {
    compile project(':application')

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'com.mercadolibre:lockclient:2.1.0'
    implementation 'com.mercadolibre:spring-boot-starter-config:2.0.1'
    implementation 'com.mercadolibre.metrics:datadog-metric-wrapper:0.0.13'
    implementation 'com.mercadolibre.fbm.wms.outbound:commons:0.1.2'
    implementation 'com.mercadolibre.restclient:meli-restclient-default:0.3.53'
    implementation 'com.mercadolibre.resilience:resilience-core:1.1.1'
    implementation 'com.mercadolibre.library:kraken-client-java:1.4.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation "com.mercadolibre.restclient:meli-restclient-core:0.3.52:tests"
}

configurations {
    all {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
        exclude group: 'ch.qos.logback', module: 'logback-classic'
        exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
    }
}

task runLocal {
    run {
        systemProperty "configFileName", "src/test/resources/configuration.properties"
        systemProperty "checksumEnabled", "false"
    }
}

runLocal.finalizedBy run

test {
    systemProperty "configFileName", "src/test/resources/configuration.properties"
    systemProperty "checksumEnabled", "false"

    useJUnitPlatform()

    testLogging {
        exceptionFormat = 'full'
    }
}

generateLombokConfig.enabled = false
